--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
 .input-field {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
-h1 {
+h1,
+h2 {
   text-align: center;
+  font-size: 30px;
 }
 
 .display {
   border: 2px solid black;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  overflow-y: scroll;
 }
 
 .displayed-book {
@@ -52,6 +59,7 @@ button {
   display: flex;
   align-items: center;
   flex-direction: column;
+  width: 80%;
 }
 
 .input article {
@@ -80,9 +88,14 @@ button {
 }
 
 /* Header */
+header {
+  display: flex;
+  flex-direction: column;
+}
 
 .header-items {
-    padding: 5px 15px;
+  width: 96%;
+    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-self: center;
@@ -119,8 +132,52 @@ nav a:not(:first-child):not(:last-child) {
 }
 
 .date {
-  float: right;
+  align-self: flex-end;
   margin-right: 3rem;
-    font-size: 18px;
-      font-weight: 700;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+/* Contact */
+#add-book {
+ display: flex;
+}
+#book-list {
+  display: flex;
+  
+}
+
+#contact-info {
+    display: flex;
+}
+
+.contact p,
+.contact ul li {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+/* Footer */
+
+footer {
+  padding: 10px 20px;
+  display: flex;
+  border: 2px solid black;
+}
+
+footer p {
+  margin: 0;
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+/* containers */
+.nav-pages {
+ height: 80vh;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
 }
