--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ nav a:not(:first-child):not(:last-child) {
 
 /* Contact */
 #add-book {
- display: flex;
+ display: none;
 }
 #book-list {
   display: flex;
@@ -148,7 +148,7 @@ nav a:not(:first-child):not(:last-child) {
 }
 
 #contact-info {
-    display: flex;
+  display: none;
 }
 
 .contact p,
@@ -175,11 +175,15 @@ footer p {
 
 /* containers */
 .nav-pages {
- height: 80vh;
+ height: 70vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
+}
+
+.flex {
+  display: flex;
 }
 
 .no-display {
